--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,3 +27,8 @@ steps:
     mavenAuthenticateFeed: false
     effectivePomSkip: false
     sonarQubeRunAnalysis: false
+- task: Docker@2
+  inputs:
+    containerRegistry: 'dockerhub_sc'
+    command: 'buildAndPush'
+    Dockerfile: '**/Dockerfile'
