--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,5 +32,6 @@ steps:
 - task: Docker@2
   inputs:
     containerRegistry: 'dockerhub_sc'
+    repository: 'devops839/voting-app-java'
     command: 'buildAndPush'
     Dockerfile: '**/Dockerfile'
