Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,14 +10,14 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-# Step 1: Install Java 17
+# Install Java 17
 - task: JavaToolInstaller@0
   inputs:
     versionSpec: '17'
     jdkArchitectureOption: 'x64'
     jdkSourceOption: 'PreInstalled'
     
-# Step 2: Compile the code (doesn't create jar)
+# Compile the code (doesn't create jar)
 - task: Maven@4
   inputs:
     mavenPomFile: 'pom.xml'
@@ -30,7 +30,7 @@ steps:
     effectivePomSkip: false
     sonarQubeRunAnalysis: false
 
-# Step 3: Package the code (creates the jar)
+# Package the code (creates the jar)
 - task: Maven@4
   inputs:
     mavenPomFile: 'pom.xml'
@@ -43,26 +43,13 @@ steps:
     effectivePomSkip: false
     sonarQubeRunAnalysis: false
 
-# Step 4: List contents of target directory (debugging step)
+# List contents of target directory (debugging step)
 - script: |
     echo "Listing contents of target directory"
     ls -l target/
   displayName: 'List contents of target directory'
 
-# Step 5: Run tests (JUnit)
-- task: Maven@4
-  inputs:
-    mavenPomFile: 'pom.xml'
-    goals: 'test'
-    publishJUnitResults: true
-    testResultsFiles: '**/surefire-reports/TEST-*.xml'
-    javaHomeOption: 'JDKVersion'
-    mavenVersionOption: 'Default'
-    mavenAuthenticateFeed: false
-    effectivePomSkip: false
-    sonarQubeRunAnalysis: false
-
-# Step 6: Verify (integration tests, checks)
+# Verify (integration tests, checks)
 - task: Maven@4
   inputs:
     mavenPomFile: 'pom.xml'
@@ -75,7 +62,7 @@ steps:
     effectivePomSkip: false
     sonarQubeRunAnalysis: false
 
-# Step 7: Build and Push Docker Image
+# Build and Push Docker Image
 - task: Docker@2
   inputs:
     containerRegistry: 'dockerhub_sc'
@@ -83,3 +70,9 @@ steps:
     command: 'buildAndPush'
     Dockerfile: '**/Dockerfile'
     tags: 'latest'
+
+# Run the Docker Container
+- script: |
+    echo "Running Docker container from the image"
+    docker run -d -p 8080:8080 pavan539/voting-app-java:latest
+  displayName: 'Run Docker container'
