--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,12 @@ steps:
     versionSpec: '17'
     jdkArchitectureOption: 'x64'
     jdkSourceOption: 'PreInstalled'
-    
+
+- task: SonarQubePrepare@7
+  inputs:
+    SonarQube: 'sonar_sc'
+    scannerMode: 'other'
+
 # Compile the code (doesn't create jar)
 - task: Maven@4
   inputs:
@@ -56,6 +61,9 @@ steps:
     effectivePomSkip: false
     sonarQubeRunAnalysis: false
 
+- task: SonarQubeAnalyze@7
+  inputs:
+    jdkversion: 'JAVA_HOME_17_X64'
 # Build and Push Docker Image
 - task: Docker@2
   inputs:
