--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
 
     <properties>
         <java.version>17</java.version> <!-- Ensure compatibility with Java 17 -->
+        <!-- SonarQube Configuration -->
+        <sonar.projectKey>voting_app_voting_app_AZNAd2rW0ehqphdOvO_g</sonar.projectKey> <!-- Your project key in SonarQube -->
+        <sonar.projectName>voting-app</sonar.projectName> <!-- Your project name in SonarQube -->
+        <sonar.projectVersion>0.0.1-SNAPSHOT</sonar.projectVersion> <!-- Your project version -->
+        <sonar.sources>src/main/java</sonar.sources> <!-- Your source directory -->
+        <sonar.java.binaries>target/classes</sonar.java.binaries> <!-- Compiled bytecode location -->
     </properties>
 
     <!-- Dependencies section -->
@@ -91,6 +97,26 @@
                     <target>${java.version}</target>
                 </configuration>
             </plugin>
+
+            <!-- SonarQube Plugin (for analysis) -->
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.9.1.2184</version> <!-- Use the latest version of the SonarQube plugin -->
+            </plugin>
+
+            <!-- Surefire Plugin (for unit testing reports) -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <includes>
+                        <include>**/Test*.java</include>
+                    </includes>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
