--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ steps:
   inputs:
     SonarQube: 'sonarqube_sc'
     scannerMode: 'other'
-    extraProperties: 'sonar.ws.timeout=120  # Increase timeout to 120 seconds'
+    extraProperties: 'sonar.ws.timeout=120  # Increased timeout to 120 seconds'
 
 # Install Java 17
 - task: JavaToolInstaller@0
