--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,10 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
+- script: |
+    curl http://192.168.1.129/:9000/api/server/version
+  displayName: 'Test SonarQube API Connectivity'
+
 # Prepare SonarQube analysis configuration
 - task: SonarQubePrepare@7
   inputs:
