--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    
+
     <modelVersion>4.0.0</modelVersion>
 
     <!-- Parent section (Spring Boot Starter Parent) -->
@@ -23,11 +23,13 @@
     <properties>
         <java.version>17</java.version> <!-- Ensure compatibility with Java 17 -->
         <!-- SonarQube Configuration -->
-        <sonar.projectKey>voting_app_voting_app_AZNAd2rW0ehqphdOvO_g</sonar.projectKey> <!-- Your project key in SonarQube -->
+        <sonar.projectKey>voting_app_key</sonar.projectKey> <!-- Your project key in SonarQube -->
         <sonar.projectName>voting-app</sonar.projectName> <!-- Your project name in SonarQube -->
         <sonar.projectVersion>0.0.1-SNAPSHOT</sonar.projectVersion> <!-- Your project version -->
         <sonar.sources>src/main/java</sonar.sources> <!-- Your source directory -->
         <sonar.java.binaries>target/classes</sonar.java.binaries> <!-- Compiled bytecode location -->
+        <!-- Timeout configuration for SonarQube analysis -->
+        <sonar.ws.timeout>180</sonar.ws.timeout> <!-- Increased timeout -->
     </properties>
 
     <!-- Dependencies section -->
@@ -102,7 +104,7 @@
             <plugin>
                 <groupId>org.sonarsource.scanner.maven</groupId>
                 <artifactId>sonar-maven-plugin</artifactId>
-                <version>3.9.1.2184</version> <!-- Use the latest version of the SonarQube plugin -->
+                <version>3.9.2</version> <!-- Use the latest stable version of the SonarQube plugin -->
             </plugin>
 
             <!-- Surefire Plugin (for unit testing reports) -->
