--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <properties>
         <java.version>17</java.version> <!-- Ensure compatibility with Java 17 -->
         <!-- SonarQube Configuration -->
-        <sonar.projectKey>voting_app_voting_app_AZNAd2rW0ehqphdOvO_g</sonar.projectKey> <!-- Your project key in SonarQube -->
+        <sonar.projectKey>voting-app-key</sonar.projectKey> <!-- Your project key in SonarQube -->
         <sonar.projectName>voting-app</sonar.projectName> <!-- Your project name in SonarQube -->
         <sonar.projectVersion>0.0.1-SNAPSHOT</sonar.projectVersion> <!-- Your project version -->
         <sonar.sources>src/main/java</sonar.sources> <!-- Your source directory -->
