Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,8 +14,12 @@ steps:
 - task: SonarQubePrepare@7
   inputs:
     SonarQube: 'sonarqube_sc'
-    scannerMode: 'other'
-    extraProperties: 'sonar.ws.timeout=180'
+    scannerMode: 'cli'
+    configMode: 'manual'
+    cliProjectKey: 'voting-app'
+    cliProjectName: 'voting-app'
+    cliSources: '.'
+    extraProperties: 'sonar.java.binaries=.'
 
 # Install Java 17
 - task: JavaToolInstaller@0
@@ -52,6 +56,17 @@ steps:
   inputs:
     containerRegistry: 'dockerhub_sc'
     repository: 'pavan539/voting-app-java'
-    command: 'buildAndPush'
+    command: 'build'
     Dockerfile: '**/Dockerfile'
     tags: 'latest'
+
+- task: CmdLine@2
+  inputs:
+    script: 'trivy fs --format table -o trivy-fs-report.html .'
+    displayName: Trivy Scan
+
+- task: Docker@2
+  inputs:
+    containerRegistry: 'dockerhub_sc'
+    repository: 'pavan539/voting-app-java'
+    command: 'push'
