Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ trigger:
       - releases/old*
 
 pool:
-  vmImage: ubuntu-latest
+  name: AgentReady
 
 steps:
 # Prepare SonarQube analysis configuration
