--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ trigger:
       - releases/old*
 
 pool:
-  name: AgentReady
+  name: 'AgentReady'
 
 steps:
 # Prepare SonarQube analysis configuration
