--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ trigger:
       - releases/old*
 
 pool:
-  name: 'AgentReady'
+  vmImage: 'ubuntu-latest'
 
 steps:
 # Checkout the repository with full history
@@ -57,6 +57,13 @@ steps:
     Dockerfile: '**/Dockerfile'
     tags: 'latest'
 
+# Install Trivy (if not pre-installed)
+- script: |
+    curl -sfL https://github.com/aquasecurity/trivy/releases/download/v0.29.0/trivy_0.29.0_Linux-64bit.deb -o trivy.deb
+    sudo dpkg -i trivy.deb
+  displayName: 'Install Trivy'
+
+# Scan Docker image using Trivy Scan
 - script: |
     echo "Running Trivy scan on the Docker image"
     trivy image --format table -o trivy-image-report.html pavan539/voting-app-java:latest
